# gqpe

./: .gitignore  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  meson.build
data/: application-menu.ui  application-window.ui  cities.csv  geolocation.ui  gqpe.css  gqpe.desktop  gqpe.desktop.in  gqpe.gresource.xml  gqpe.ui  meson.build  mx.unam.GQPE.schema.xml  quick-photo-editor.desktop  quick-photo-editor.ui
lib/: city.vala  color.vala  namespace.vala  orientation.vala  photograph.vala  pretty-box.vala  tag.vala  util.vala
man/: custom-html.xsl  custom-man.xsl  gqpe-copy.xml  gqpe-galeria.xml  gqpe-interpolate-gps.xml  gqpe-shotwell.xml  gqpe-store.xml  gqpe-tags.xml  meson.build
po/: Makevars  POTFILES  POTFILES.in  POTFILES.skip  es.gmo  es.po  gqpe.pot  meson.build  quick-photo-editor.pot
src/: application-main.vala  application-window.vala  application.vala  copy.vala  galeria.vala  geolocation-window.vala  interpolate-gps.vala  main.vala  namespace.vala  orientation.vala  photo-image.vala  photograph-image.vala  photograph.vala  quick-photo-editor.vala  shotwell.vala  store.vala  tag.vala  tags.vala
vapi/: config.vapi
